# dtcc

./: .gitignore  CODE_REVIEW_REPORT.md  README.md  pyproject.toml
demos/: atlas_demo.py  build.py  build_city.py  build_city_and_meshes.py  build_city_mesh.py  build_city_mesh_cityjson.py  build_city_mesh_from_cityjson.py  build_city_surface_mesh.py  build_city_volume_mesh.py  build_dem.py  build_lod1_buildings.py  build_surface_mesh.py  build_terrain.py  build_terrain_mesh.py  build_terrain_mesh_with_footprints.py  build_terrain_raster.py  build_view_cityjson.py  building_heights_from_pointcloud.py  create_cityjson.py  create_tiled_city_mesh.py  data_demo.py  datasets.py  dem-demo.py  download_and_view_cityjson.py  download_data.py  extrude_buildings.py  generate_terrain_mesh.py  simplify_building_footprints.py  terrain_with_building_footprints.py  view_city.py  view_cityjson.py  view_mesh.py  view_multi_geometry.py  view_pointcloud.py
docs/: Makefile  conf.py  data_classes.rst  data_formats.rst  data_model.rst  demos.rst  development.rst  index.rst  installation.rst  usage.rst  usage_viewer.rst
sandbox/: data_demo.py.onhold  debug_volume_meshing.py  dem_surface_mesh.py  fields.py  lloyd_smoothing.py  lloyd_smoothing_3d.py  mesh_error.py  new_api.py  new_volume_mesh_builder_test.py  partition_sweden.py  pb_benchmark.py  plotting.py  quantities.py  scratch.ipynb  simplify_building_footprints_debug.py  step_by_step_surface_mesh.py  step_by_step_volume_mesh.py  volume_test_debug.py
workflows/: README.md  Requirements.txt  unreal_tiles_config.json  workflow_sanjay.py  (+3 more)
(+60 files in other folders)
