[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.9.4"
name = "dtcc"
description = "DTCC"
readme = "README.md"
authors = [
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "George Spaias" , email= "gspaiasa@ece.auth.gr" },
  { name = "Jens Olsson" , email= "jens.olsson@chalmersindustriteknik.se" },
  { name = "Themistoklis Arvanitis" , email= "thearva@chalmers.se" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "dtcc-core@git+https://github.com/dtcc-platform/dtcc-core.git@release/0.9.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-immaterial"]
viewer = ["dtcc-viewer@git+https://github.com/dtcc-platform/dtcc-viewer.git@release/0.9.4"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
build-verbosity = 1
